Added feature importance

--- a/3_KNN.ipynb
+++ b/3_KNN.ipynb
@@ -344,11 +344,11 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        " Higher importance values indicate more significant features."
+      ]
     }
   ],
   "metadata": {
